--- a/OctoUML-master/pom.xml
+++ b/OctoUML-master/pom.xml
@@ -395,6 +395,26 @@
     			<artifactId>org.eclipse.core.resources</artifactId>
     			<version>3.7.100</version>
 		</dependency>
+		<dependency>
+    			<groupId>com.jcabi</groupId>
+    			<artifactId>jcabi-aether</artifactId>
+    			<version>0.10.1</version>
+		</dependency>
+		
+		<dependency>
+        <groupId>org.sonatype.aether</groupId>
+        <artifactId>aether-api</artifactId>
+        <version>1.13.1</version>
+    </dependency>
+
+
+    <dependency>
+        <groupId>org.apache.maven</groupId>
+        <artifactId>maven-core</artifactId>
+        <version>3.0.3</version>
+    </dependency>
+
+		
 	</dependencies>
 
 	<repositories>
