--- a/OctoUML-master/pom.xml
+++ b/OctoUML-master/pom.xml
@@ -42,6 +42,17 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
+    
+    <distributionManagement>
+		<repository>
+			<id>se-nexus</id>
+			<url>http://nexus.se.rwth-aachen.de/content/repositories/montiarc-releases/</url>
+		</repository>
+		<snapshotRepository>
+			<id>se-nexus</id>
+			<url>http://nexus.se.rwth-aachen.de/content/repositories/montiarc-snapshots/</url>
+		</snapshotRepository>
+	</distributionManagement>
 
 
 	<!-- == DEFAULT BUILD SETTINGS =========================================== -->
