--- a/octouml/pom.xml
+++ b/octouml/pom.xml
@@ -232,7 +232,7 @@
 		</dependency>
 
 		<dependency>
-			<groupId>local.octouml.paleo</groupId>
+			<groupId>octouml.paleo</groupId>
 			<artifactId>paleo</artifactId>
 			<version>1.0</version>
 			<scope>system</scope>
@@ -240,7 +240,7 @@
 		</dependency>
 
 		<dependency>
-			<groupId>local.octouml.ecologylabFundamental</groupId>
+			<groupId>octouml.ecologylabFundamental</groupId>
 			<artifactId>ecologylabFundamental</artifactId>
 			<version>1.0</version>
 			<scope>system</scope>
@@ -248,7 +248,7 @@
 		</dependency>
 
 		<dependency>
-			<groupId>local.octouml.weka</groupId>
+			<groupId>octouml.weka</groupId>
 			<artifactId>weka</artifactId>
 			<version>1.0</version>
 			<scope>system</scope>
@@ -256,15 +256,15 @@
 		</dependency>
 
 		<dependency>
-			<groupId>local.octouml.kryonet</groupId>
+			<groupId>octouml.kryonet</groupId>
 			<artifactId>kryonet</artifactId>
-			<version>1.0</version>
+			<version>2.21</version>
 			<scope>system</scope>
 			<systemPath>${project.basedir}/src/main/resources/lib/kryonet-2.21.jar</systemPath>
 		</dependency>
 
 		<dependency>
-			<groupId>local.octouml.sphinx4-core-5prealpha-20160628.232526-10</groupId>
+			<groupId>octouml.sphinx4-core-5prealpha-20160628.232526-10</groupId>
 			<artifactId>sphinx4-core-5prealpha-20160628.232526-10</artifactId>
 			<version>1.0</version>
 			<scope>system</scope>
@@ -272,11 +272,19 @@
 		</dependency>
 
 		<dependency>
-			<groupId>local.octouml.sphinx4-data-5prealpha-20160628.232535-10</groupId>
+			<groupId>octouml.sphinx4-data-5prealpha-20160628.232535-10</groupId>
 			<artifactId>sphinx4-data-5prealpha-20160628.232535-10</artifactId>
 			<version>1.0</version>
 			<scope>system</scope>
 			<systemPath>${project.basedir}/src/main/resources/lib/voice/sphinx4-data-5prealpha-20160628.232535-10.jar</systemPath>
+		</dependency>
+		
+		<dependency>
+			<groupId>octouml.jxgrabkey</groupId>
+			<artifactId>jxgrabkey</artifactId>
+			<version>1.0</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/src/main/resources/lib/jxgrabkey-1.0.jar</systemPath>
 		</dependency>
 
 		<dependency>
