--- a/diagram-control/pom.xml
+++ b/diagram-control/pom.xml
@@ -352,6 +352,12 @@
 			<groupId>com.sikulix</groupId>
 			<artifactId>sikulixapi</artifactId>
 			<version>1.1.1</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.github.vidstige</groupId>
+                    <artifactId>jadb</artifactId>
+                </exclusion>
+            </exclusions>
 		</dependency>
 
 		<dependency>
