--- a/diagram-control/pom.xml
+++ b/diagram-control/pom.xml
@@ -431,6 +431,13 @@
 		</repository>
 	</repositories>
 
+    <distributionManagement>
+        <snapshotRepository>
+            <id>se-nexus</id>
+            <url>https://nexus.se.rwth-aachen.de/content/repositories/octouml-snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
+
 
 	<reporting>
 		<plugins>
