working on fixing the build failure

--- a/pom.xml
+++ b/pom.xml
@@ -11,4 +11,12 @@
     <module>octouml</module>
 		<module>diagram-control</module>
   </modules>
+  
+  <distributionManagement>
+      <snapshotRepository>
+          <id>se-nexus</id>
+          <url>https://nexus.se.rwth-aachen.de/content/repositories/octouml-snapshots/</url>
+      </snapshotRepository>
+  </distributionManagement>
+
 </project>
