--- a/octouml/pom.xml
+++ b/octouml/pom.xml
@@ -231,53 +231,54 @@
 			<scope>test</scope>
 		</dependency>
 
-		<dependency>
-			<groupId>octouml.paleo</groupId>
-			<artifactId>paleo</artifactId>
-			<version>1.0</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/src/main/resources/lib/paleo.jar</systemPath>
-		</dependency>
-
-		<dependency>
-			<groupId>octouml.ecologylabFundamental</groupId>
-			<artifactId>ecologylabFundamental</artifactId>
-			<version>1.0</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/src/main/resources/lib/ecologylabFundamental.jar</systemPath>
-		</dependency>
-
-		<dependency>
-			<groupId>octouml.weka</groupId>
-			<artifactId>weka</artifactId>
-			<version>1.0</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/src/main/resources/lib/weka.jar</systemPath>
-		</dependency>
-
-		<dependency>
-			<groupId>octouml.kryonet</groupId>
-			<artifactId>kryonet</artifactId>
-			<version>2.21</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/src/main/resources/lib/kryonet-2.21.jar</systemPath>
-		</dependency>
-
-		<dependency>
-			<groupId>octouml.sphinx4-core-5prealpha-20160628.232526-10</groupId>
-			<artifactId>sphinx4-core-5prealpha-20160628.232526-10</artifactId>
-			<version>1.0</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/src/main/resources/lib/voice/sphinx4-core-5prealpha-20160628.232526-10.jar</systemPath>
-		</dependency>
-
-		<dependency>
-			<groupId>octouml.sphinx4-data-5prealpha-20160628.232535-10</groupId>
-			<artifactId>sphinx4-data-5prealpha-20160628.232535-10</artifactId>
-			<version>1.0</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/src/main/resources/lib/voice/sphinx4-data-5prealpha-20160628.232535-10.jar</systemPath>
-		</dependency>
+<!-- <dependency> <groupId>octouml.paleo</groupId> <artifactId>paleo</artifactId>
+ <version>1.0</version> <scope>system</scope> <systemPath>${project.basedir}/src/main/resources/lib/paleo.jar</systemPath>
+ </dependency> <dependency> <groupId>octouml.ecologylabFundamental</groupId>
+ <artifactId>ecologylabFundamental</artifactId> <version>1.0</version> <scope>system</scope>
+ <systemPath>${project.basedir}/src/main/resources/lib/ecologylabFundamental.jar</systemPath>
+ </dependency> <dependency> <groupId>octouml.weka</groupId> <artifactId>weka</artifactId>
+ <version>1.0</version> <scope>system</scope> <systemPath>${project.basedir}/src/main/resources/lib/weka.jar</systemPath>
+ </dependency> <dependency> <groupId>octouml.kryonet</groupId> <artifactId>kryonet</artifactId>
+ <version>2.21</version> <scope>system</scope> <systemPath>${project.basedir}/src/main/resources/lib/kryonet-2.21.jar</systemPath>
+ </dependency> <dependency> <groupId>octouml.sphinx4-core-5prealpha-20160628.232526-10</groupId>
+ <artifactId>sphinx4-core-5prealpha-20160628.232526-10</artifactId> <version>1.0</version>
+ <scope>system</scope> <systemPath>${project.basedir}/src/main/resources/lib/voice/sphinx4-core-5prealpha-20160628.232526-10.jar</systemPath>
+ </dependency> <dependency> <groupId>octouml.sphinx4-data-5prealpha-20160628.232535-10</groupId>
+ <artifactId>sphinx4-data-5prealpha-20160628.232535-10</artifactId> <version>1.0</version>
+ <scope>system</scope> <systemPath>${project.basedir}/src/main/resources/lib/voice/sphinx4-data-5prealpha-20160628.232535-10.jar</systemPath>
+ </dependency> <dependency> <groupId>octouml.jxgrabkey</groupId> <artifactId>jxgrabkey</artifactId>
+ <version>1.0</version> <scope>system</scope> <systemPath>${project.basedir}/src/main/resources/lib/jxgrabkey-1.0.jar</systemPath>
+ </dependency> -->
+<dependency>
+    <groupId>octouml.paleo</groupId>
+    <artifactId>paleo</artifactId>
+    <version>1.0</version>
+</dependency>
+<dependency>
+    <groupId>octouml.ecologylabFundamental</groupId>
+    <artifactId>ecologylabFundamental</artifactId>
+    <version>1.0</version>
+</dependency>
+<dependency>
+    <groupId>octouml.weka</groupId>
+    <artifactId>weka</artifactId>
+    <version>1.0</version>
+</dependency>
+<dependency>
+    <groupId>octouml.kryonet</groupId>
+    <artifactId>kryonet</artifactId>
+    <version>2.21</version>
+</dependency>
+<dependency>
+    <groupId>octouml.sphinx4-core-5prealpha-20160628.232526-10</groupId>
+    <artifactId>sphinx4-core-5prealpha-20160628.232526-10</artifactId>
+    <version>1.0</version>
+</dependency>
+<dependency>
+    <groupId>octouml.sphinx4-data-5prealpha-20160628.232535-10</groupId>
+    <artifactId>sphinx4-data-5prealpha-20160628.232535-10</artifactId>
+    <version>1.0</version>
+</dependency>
 		
 		<dependency>
 			<groupId>org.ow2.asm</groupId>
