--- a/diagram-control/pom.xml
+++ b/diagram-control/pom.xml
@@ -311,6 +311,7 @@
 			</exclusions>
 		</dependency>-->
 		
+        <!-- probably resolve warnings -->
 		<dependency>
  			<groupId>octouml.log4j</groupId>
  			<artifactId>log4j</artifactId>
