--- a/diagram-control/pom.xml
+++ b/diagram-control/pom.xml
@@ -43,6 +43,12 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
 
+<distributionManagement>
+    <snapshotRepository>
+        <id>se-nexus</id>
+        <url>https://nexus.se.rwth-aachen.de/content/repositories/octouml-snapshots/</url>
+    </snapshotRepository>
+</distributionManagement>
 
 	<!-- == DEFAULT BUILD SETTINGS =========================================== -->
 
